consolidating breakpoints for dashboard. forcing minimum width at a higher level to prevent weird gaps.

--- a/assets/src/dashboard/style.css
+++ b/assets/src/dashboard/style.css
@@ -32,8 +32,7 @@ body.js {
 
 body.web-story_page_stories-dashboard {
   position: relative;
-  overflow-x: hidden;
-  overflow-y: scroll;
+  overflow: scroll;
 }
 
 #adminmenuback {
